# miraculix

./: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
R/: S3.R  aaa_auto.R  auxiliary.R  debugging.R  haplogeno.R  rhaplo.R
man/: RFoptions.Rd  as.genomic.Rd  genomicmatrix-class.Rd  haplomatrix.class.Rd  miraculix.Rd
man/macros/: allg_defn.Rd  defn.Rd
src/: 2bit.cc  3bit.cc  AutoMiraculix.h  Bit23.cc  Bit23.intern.h  Haplo.cc  IntrinsicsBase.h  MX.cc  MX.h  MoBPS.cc  Scalar.cc  Vector.matrix.cc  dummy.h  error.h  hamming.cc  hamming2.cc  hamming3.cc  haplogeno.cc  haplogeno.h  initNerror.cc  intrinsics.h  kleinkram.cc  kleinkram.h  miraculix.h  multiply.cc  multiply256.cc  nocoding.cc  options.cc  options.h  packed128.cc  packed256.cc  packedDef.h  packedIntern.h  scan.cc  shuffle.cc  shuffle128.cc  shuffle256.cc  sse.cc  windower.cc  xport_import.cc  (+2 more)
